Fixing dark mode

--- a/collections/styles.css
+++ b/collections/styles.css
@@ -120,6 +120,7 @@ body {
 	font-variant: common-ligatures;
 }
 
+
 .grid-container {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -402,7 +403,6 @@ padding-right: 15px;
 .navbar_title_container a {
 	display: inline-block;
 position: relative;
-
 }
 
 .navbar .toggle_nav {
@@ -701,6 +701,10 @@ span.breadcrumb a:before {
 		order: 4;
 	}
 	
+	.index_gal_desc h1 {
+		display: none;
+	}
+	
 	
 	
 	.grid-container {
@@ -724,6 +728,7 @@ span.breadcrumb a:before {
 		left: 0;
 		top: 0;
 		padding-top: 30px;
+		padding-bottom: 10%;
 		flex-direction: column;
 		display: flex;
 		backdrop-filter: blur(5px);
@@ -770,9 +775,10 @@ font-size: 125%;
 		font-size: 90%;
 	}
 	
-	 .breadcrumb {
+	 .breadcrumb a {
 		font-size: 90%;
-	 }
+			padding-bottom: .5rem;
+		margin-bottom: 1.5rem; }
 	
 		a.navbar_title {
 		padding-right: 0;
@@ -811,8 +817,17 @@ span.tagMatches {
 	}
 	
 		 .breadcrumb {
-		font-size: 100%;
 	 }
+	 
+	 	 .breadcrumb a {
+		font-size: 100%;
+			padding-bottom: .5rem;
+		margin-bottom: 1.5rem; 
+		padding-top: 2rem;
+		padding-bottom: 2rem;
+		margin-top: 2rem;
+		margin-bottom: 2rem;	 	 }
+		
 	.navbar {
 		padding-left: 76px;
 		padding-right: 76px;
@@ -909,8 +924,10 @@ img[alt*="protected"] {
 }
 
 .album_head h1 {
+	margin-top: 1.5rem;
 	font-size: 200%;
 	text-align: center;
+	line-height: 1.2;
 }
 
 
@@ -980,7 +997,7 @@ max-width: 100ch;
 		margin-right: auto;
 		padding-left: 3rem;
 		padding-right: 3rem;
-		display: flex;
+		display: block;
 		margin-bottom: 3rem;
 }
 
@@ -1006,6 +1023,11 @@ max-width: 100ch;
 	font-size: 1.3rem;
 }
 
+@media (min-width:700px) {
+	.picture_detail {
+		display: flex;
+	}
+}
 @media (max-width:700px) {
 	.picture_detail img {
 		margin-bottom: 2rem;
@@ -1048,39 +1070,19 @@ ul.taglist{
 }
 	
 
-/*.taglist a {
-	text-transform: uppercase;
-	letter-spacing: .1rem;
-	font-weight: 500;
-	font-size: 1.2rem;
-	display: inline-block;
-	margin-left: 0.2rem;
-	margin-right: 0.2rem;
-	margin-bottom: 0.8rem;
-	padding-top: 7px;
-	padding-bottom: 7px;
-	padding-left: 10px;
-	padding-right: 10px;
-	text-decoration: none;
-	border-radius: 4rem;
-	background-color: #ededed;
-	transition: background .3s ease-out 0s;
-	color: #6a6a6a;
-}*/
-
 .taglist a {
 	text-transform: uppercase;
 	letter-spacing: .1rem;
 	font-weight: 500;
-	font-size: 1.2rem;
+	font-size: 1rem;
 	display: inline-block;
 	margin-left: 0.2rem;
 	margin-right: 0.2rem;
 	margin-bottom: 0.8rem;
-	padding-top: 7px;
-	padding-bottom: 7px;
-	padding-left: 10px;
-	padding-right: 10px;
+	padding-top: 4px;
+	padding-bottom: 4px;
+	padding-left: 7px;
+	padding-right: 7px;
 	text-decoration: none;
 	transition: box-shadow .1s ease-out 0s,transform .1s ease-out 0s;
 		color: #6a6a6a;
@@ -1198,7 +1200,6 @@ a.svg_button {
 	transition: box-shadow .2s ease-out 0s,transform .2s ease-out 0s;
 	border-radius: 5px;
 	border: 1px solid #e2e2e2;
-	
 }
 
 a.svg_button:hover {
@@ -1239,6 +1240,15 @@ div.textobject {
 .picture_descr h1 {
 	font-size: 200%;
 }
+
+.taglist a {
+	font-size: 1.2rem;
+	padding-top: 7px;
+	padding-bottom: 7px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
 }
 
 
@@ -1328,6 +1338,7 @@ padding-left: 2rem;
 
 div.bloc-rating-content {
 	display: flex;
+	flex-direction: column;
 }
 
 div.bloc-rating .star-rating-control::after {
@@ -1474,6 +1485,10 @@ display: inherit;
 .bloc_relat_item ul {
 	grid-template-columns: repeat(auto-fill, calc(24.20%));
 	gap:1%;
+}
+
+div.bloc-rating-content {
+	flex-direction: row;
 }
 	.picture_detail,.media_supp,.bloc_relat_item {
 		margin-bottom: 6rem;
@@ -2029,14 +2044,38 @@ a.menu-active::after,
 		background-color: #444444;
 	}
 	
-	.media_supp_content > div, .bloc_relat_item li {
-		box-shadow: 0 0 10px rgba(41, 41, 41, 0.65);
+.bloc_relat_item li {
+		box-shadow: 0 0 10px rgba(41, 41, 41, 0.95);
 	}
+	
+		.media_supp_content > div {
+			background-color: #333333;
+		box-shadow: none;
+		}
 	
 	.bloc_relat_item li:hover {
 				box-shadow: 0 0 15px rgb(21, 21, 21);
 
 	}
+	
+		.bloc_relat_item li.news, .bloc_relat_item li.pages {
+		background: url(images/textDefault_night.svg) center top no-repeat;
+				display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+	}
+	
+	figure.document img[src*="textDefault"] {
+	background: url(images/textDefault_night.svg) center center #565656;
+		background-size: cover;
+		border-radius: 5px;
+	}
+
+img[src*="imageDefault"] {
+	background: url(images/imageDefault_night.svg) center center #565656;
+	background-size: 100%;
+}
+
 	div.comment {
 			background-color: #444444;
 		}
@@ -2071,7 +2110,8 @@ div.bloc-favs,
 	.taglist a,
 a.svg_button,
 	ul.pages_search_blocs li,
-	main #register_link {
+	main #register_link,
+	.pagelist a {
 			background-color: #5a5a5a;	
 			box-shadow: none;
 			border: none;
@@ -2137,5 +2177,9 @@ div.bloc-favs .imagesFavorites_add, div.bloc-favs .albumsFavorites_add {
 	background-size: 30px;
 }
 
+figure.sub_album img, #index_gal figure img {
+box-shadow: 0 0 4px #000000;	
+border: none;
+	}
 }
 
